kustomization/overlays/prod/homeassistant/cnpg/backup.yml
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    argocd.argoproj.io/hook: PreSync
    argocd.argoproj.io/hook-delete-policy: HookSucceeded
    argocd.argoproj.io/sync-wave: "1"
  name: homeassistant-pre-update-backup-complete-check
spec:
  containers:
    - args:
        - /scripts/wait-for-backup.sh
      command:
        - bash
        - -c
      image: docker.io/bitnami/kubectl
      name: check
      volumeMounts:
        - mountPath: /scripts
          name: scripts
  restartPolicy: Never
  serviceAccount: cnpg-backup-check
  volumes:
    - configMap:
        defaultMode: 0777
        name: cnpg-backup-scripts-configmap
      name: scripts
